tests/ui/coherence/coherence-error-suppression.stderr
error[E0412]: cannot find type `DoesNotExist` in this scope
  --> $DIR/coherence-error-suppression.rs:9:14
   |
LL | impl Foo for DoesNotExist {}
   |              ^^^^^^^^^^^^ not found in this scope

error: hi
  --> $DIR/coherence-error-suppression.rs:9:1
   |
LL | trait Foo {}
   | --------- built-in `dyn Foo` implementation for this trait
...
LL | impl Foo for DoesNotExist {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ overlaps with this blanket impl
   |
   = note: `#[forbid(dyn_overlap)]` on by default

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0412`.
